# daily-python-practice

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/CFD_TurbB_2022R1_EN_WI02_Fluent-ImpJet/: ImpingingJet-expressions.ccl  Mesh-1.msh  Nu_exp.csv  Velocity_exp_r1_(RD=0.5).csv  Velocity_exp_r2_(RD=1.0).csv  Velocity_exp_r3_(RD=2.5).csv  polylines-for-vel-plotting.cse  profile-ke.csv  profile-sst.csv
src/exercises/: __init__.py  bank_account.py  banking_system.py  coffee_shop.py  condiment_decorator.py  decorators_e001.py  decorators_e002.py  decorators_e003.py  decorators_e004.py  decorators_e005.py  decorators_e006.py  decorators_e007.py  decorators_e008.py  decorators_e009.py  decorators_e010.py  eplatform.py  fibonacci.py  handle_shopping_cart.py  hello_world.py  high_order_function_generation_exercise.py  library_management.py  logging_e001.py  organize_contacts.py  recursive_nested_list_function.py  securemessenger_class_and_functions.py  singleton_pattern.py  special_methods_practice.py  windows_commit_trial.py  wsl_commit_trial.py
src/exercises/composite_patterns/: __init__.py  directory.py  file.py  file_system.py  file_system_component.py
tests/: conftest.py  test_banking_system.py  test_decorators_e010.py  test_eplatform.py  test_exercise_0001.py  test_exercise_0002.py  test_exercise_0003.py  test_exercise_0004.py  test_exercise_0005.py  test_exercise_0006.py  test_exercise_0007.py  test_exercise_0008.py  test_exercise_0009.py  test_exercise_010.py  test_exercise_011.py  test_exercise_012.py  test_library_management.py
